--- a/_posts/2021-03-07-spaghetti-sauce/spaghetti-sauce.html
+++ b/_posts/2021-03-07-spaghetti-sauce/spaghetti-sauce.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["refs.bib","spaghetti-sauce_files/anchor-4.2.2/anchor.min.js","spaghetti-sauce_files/bowser-1.9.3/bowser.min.js","spaghetti-sauce_files/distill-2.2.21/template.v2.js","spaghetti-sauce_files/header-attrs-2.7/header-attrs.js","spaghetti-sauce_files/jquery-1.11.3/jquery.min.js","spaghetti-sauce_files/popper-2.6.0/popper.min.js","spaghetti-sauce_files/tippy-6.2.7/tippy-bundle.umd.min.js","spaghetti-sauce_files/tippy-6.2.7/tippy-light-border.css","spaghetti-sauce_files/tippy-6.2.7/tippy.css","spaghetti-sauce_files/tippy-6.2.7/tippy.umd.min.js","spaghetti-sauce_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["refs.bib","sauce_done.jpg","spaghetti-sauce_files/anchor-4.2.2/anchor.min.js","spaghetti-sauce_files/bowser-1.9.3/bowser.min.js","spaghetti-sauce_files/distill-2.2.21/template.v2.js","spaghetti-sauce_files/header-attrs-2.7/header-attrs.js","spaghetti-sauce_files/jquery-1.11.3/jquery.min.js","spaghetti-sauce_files/popper-2.6.0/popper.min.js","spaghetti-sauce_files/tippy-6.2.7/tippy-bundle.umd.min.js","spaghetti-sauce_files/tippy-6.2.7/tippy-light-border.css","spaghetti-sauce_files/tippy-6.2.7/tippy.css","spaghetti-sauce_files/tippy-6.2.7/tippy.umd.min.js","spaghetti-sauce_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1498,6 +1498,9 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>v 0.0.4</p>
 <p>The <a href="#ingredients---full">full</a> recipe should serve 6 - 8 people, the <a href="#ingredients---halved">half</a> serves 4 - 6. I know the half seems like very little sauce, but at least in our family we always have too much.</p>
 <p>Also used in our lasagna <span class="citation" data-cites="flight2021lasagna">(<a href="#ref-flight2021lasagna" role="doc-biblioref">Flight 2021</a>)</span>.</p>
+<div class="layout-chunk" data-layout="l-body">
+<p><img src="sauce_done.jpg" width="2024" /></p>
+</div>
 <h3 id="ingredients---full">Ingredients - Full</h3>
 <ul>
 <li>2 x 20oz crushed tomatoes</li>
