updated version on sloppy joes

--- a/_posts/2021-03-14-simple-sloppy-joes/simple-sloppy-joes.html
+++ b/_posts/2021-03-14-simple-sloppy-joes/simple-sloppy-joes.html
@@ -115,7 +115,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["simple-sloppy-joes_files/anchor-4.2.2/anchor.min.js","simple-sloppy-joes_files/bowser-1.9.3/bowser.min.js","simple-sloppy-joes_files/distill-2.2.21/template.v2.js","simple-sloppy-joes_files/header-attrs-2.7/header-attrs.js","simple-sloppy-joes_files/jquery-1.11.3/jquery.min.js","simple-sloppy-joes_files/popper-2.6.0/popper.min.js","simple-sloppy-joes_files/tippy-6.2.7/tippy-bundle.umd.min.js","simple-sloppy-joes_files/tippy-6.2.7/tippy-light-border.css","simple-sloppy-joes_files/tippy-6.2.7/tippy.css","simple-sloppy-joes_files/tippy-6.2.7/tippy.umd.min.js","simple-sloppy-joes_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1490,7 +1490,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </ul>
 </nav>
 </div>
-<p>v 0.0.1</p>
+<p>v 0.0.2</p>
 <h2 id="ingredients">Ingredients</h2>
 <ul>
 <li>1.5 pounds of hamburger</li>
