adding frozen timing to the poached chicken

--- a/_posts/2021-11-06-poached-chicken-breast-instant-pot/poached-chicken-breast-instant-pot.html
+++ b/_posts/2021-11-06-poached-chicken-breast-instant-pot/poached-chicken-breast-instant-pot.html
@@ -1492,6 +1492,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <ul>
 <li><a href="#ingredients">Ingredients</a></li>
 <li><a href="#directions">Directions</a></li>
+<li><a href="#frozen">Frozen</a></li>
 <li><a href="#wait-why">Wait, why?</a></li>
 </ul>
 </nav>
@@ -1522,6 +1523,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </ul></li>
 <li><p>Release pressure.</p></li>
 <li><p>Check temperature with a meat thermometer. Supposedly 165F is safe, but I still prefer 180F.</p></li>
+</ul>
+<h2 id="frozen">Frozen</h2>
+<ul>
+<li>For frozen chicken breasts:
+<ul>
+<li>2 chicken breasts - 3 minutes at pressure, 18 - 20 minute rest.</li>
+</ul></li>
 </ul>
 <h2 id="wait-why">Wait, why?</h2>
 <p>As far as I can understand, we are using the heat necessary to get the mass of water + chicken to a boiling point to actually cook the chicken (poaching). This means that the more <em>cold</em> chicken breast you put in, the more heat it will take to get it to pressure, and therefore you need <em>less</em> time to naturally release. However, we are talking changes of 1 - 2 minutes, in salty water.</p>
