--- a/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.html
+++ b/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.html
@@ -23,6 +23,7 @@
 pre > code.sourceCode { white-space: pre; position: relative; }
 pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
+.sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
 div.sourceCode { margin: 1em 0; }
 pre.sourceCode { margin: 0; }
@@ -55,7 +56,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 }
 code span.al { color: #ad0000; } /* Alert */
 code span.an { color: #5e5e5e; } /* Annotation */
-code span.at { color: #20794d; } /* Attribute */
+code span.at { } /* Attribute */
 code span.bn { color: #ad0000; } /* BaseN */
 code span.bu { } /* BuiltIn */
 code span.cf { color: #007ba5; } /* ControlFlow */
@@ -76,13 +77,14 @@ code span.kw { color: #007ba5; } /* Keyword */
 code span.op { color: #5e5e5e; } /* Operator */
 code span.ot { color: #007ba5; } /* Other */
 code span.pp { color: #ad0000; } /* Preprocessor */
-code span.sc { color: #20794d; } /* SpecialChar */
+code span.sc { color: #5e5e5e; } /* SpecialChar */
 code span.ss { color: #20794d; } /* SpecialString */
 code span.st { color: #20794d; } /* String */
 code span.va { color: #111111; } /* Variable */
 code span.vs { color: #20794d; } /* VerbatimString */
 code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </style>
+
 
   <!--radix_placeholder_meta_tags-->
   <title>Balsamic Chicken &amp; Mushrooms</title>
@@ -115,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["balsamic-chicken-mushrooms_files/anchor-4.2.2/anchor.min.js","balsamic-chicken-mushrooms_files/bowser-1.9.3/bowser.min.js","balsamic-chicken-mushrooms_files/distill-2.2.21/template.v2.js","balsamic-chicken-mushrooms_files/header-attrs-2.7/header-attrs.js","balsamic-chicken-mushrooms_files/jquery-1.11.3/jquery.min.js","balsamic-chicken-mushrooms_files/popper-2.6.0/popper.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-bundle.umd.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-light-border.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.umd.min.js","balsamic-chicken-mushrooms_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1262,7 +1264,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
       // hoverable references
       $('span.citation[data-cites]').each(function() {
-        var refHtml = $('#ref-' + $(this).attr('data-cites')).html();
+        var refs = $(this).attr('data-cites').split(" ");
+        var refHtml = refs.map(function(ref) {
+          return "<p>" + $('#ref-' + ref).html() + "</p>";
+        }).join("\n");
         window.tippy(this, {
           allowHTML: true,
           content: refHtml,
@@ -1433,8 +1438,8 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="balsamic-chicken-mushrooms_files/header-attrs-2.7/header-attrs.js"></script>
-  <script src="balsamic-chicken-mushrooms_files/jquery-1.11.3/jquery.min.js"></script>
+  <script src="balsamic-chicken-mushrooms_files/header-attrs-2.11/header-attrs.js"></script>
+  <script src="balsamic-chicken-mushrooms_files/jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <script src="balsamic-chicken-mushrooms_files/popper-2.6.0/popper.min.js"></script>
   <link href="balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.css" rel="stylesheet" />
   <link href="balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-light-border.css" rel="stylesheet" />
@@ -1495,6 +1500,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="ingredients">Ingredients</h2>
 <ul>
 <li>4 Tbsp Balsamic vinegar</li>
+<li>2 Tbsp Rice vinegar</li>
 <li>1.5 Tbsp soy sauce</li>
 <li>1 Tbsp brown sugar</li>
 <li>2 cloves garlic, minced</li>
@@ -1508,7 +1514,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="directions">Directions</h2>
 <ul>
 <li><p>Prepare the balsamic sauce first.</p></li>
-<li><p>In a small bowl, stir together <strong>4 Tbsp</strong> balsamic vinegar, <strong>1.5 Tbsp</strong> soy sauce, <strong>1 Tbsp</strong> brown sugar, <strong>2 cloves</strong> (or 2 tsp) minced garlic, and <strong>1/4 tsp</strong> dried thyme.</p></li>
+<li><p>In a small bowl, stir together <strong>4 Tbsp</strong> balsamic vinegar, <strong>2 Tbsp</strong> rice vinegar, <strong>1.5 Tbsp</strong> soy sauce, <strong>1 Tbsp</strong> brown sugar, <strong>2 cloves</strong> (or 2 tsp) minced garlic, and <strong>1/4 tsp</strong> dried thyme.</p></li>
 <li><p>Set the sauce aside.</p></li>
 <li><p>Heat a large skillet over medium.</p></li>
 <li><p>Once hot, add the olive oil and swirl to coat the surface.</p></li>
