--- a/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.html
+++ b/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["balsamic-chicken-mushrooms_files/anchor-4.2.2/anchor.min.js","balsamic-chicken-mushrooms_files/bowser-1.9.3/bowser.min.js","balsamic-chicken-mushrooms_files/distill-2.2.21/template.v2.js","balsamic-chicken-mushrooms_files/header-attrs-2.7/header-attrs.js","balsamic-chicken-mushrooms_files/jquery-1.11.3/jquery.min.js","balsamic-chicken-mushrooms_files/popper-2.6.0/popper.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-bundle.umd.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-light-border.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.umd.min.js","balsamic-chicken-mushrooms_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["balsamic-chicken-mushrooms_files/anchor-4.2.2/anchor.min.js","balsamic-chicken-mushrooms_files/bowser-1.9.3/bowser.min.js","balsamic-chicken-mushrooms_files/distill-2.2.21/template.v2.js","balsamic-chicken-mushrooms_files/header-attrs-2.11/header-attrs.js","balsamic-chicken-mushrooms_files/header-attrs-2.7/header-attrs.js","balsamic-chicken-mushrooms_files/jquery-1.11.3/jquery.min.js","balsamic-chicken-mushrooms_files/jquery-3.6.0/jquery-3.6.0.js","balsamic-chicken-mushrooms_files/jquery-3.6.0/jquery-3.6.0.min.js","balsamic-chicken-mushrooms_files/jquery-3.6.0/jquery-3.6.0.min.map","balsamic-chicken-mushrooms_files/popper-2.6.0/popper.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-bundle.umd.min.js","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy-light-border.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.css","balsamic-chicken-mushrooms_files/tippy-6.2.7/tippy.umd.min.js","balsamic-chicken-mushrooms_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1520,7 +1520,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <li><p>Once hot, add the olive oil and swirl to coat the surface.</p></li>
 <li><p>Add the pieces of chicken breast to the skillet and cook browned and cooked through.</p></li>
 <li><p>Remove the chicken to a clean plate and cover to keep warm.</p></li>
-<li><p>While the chicken is cooking, clean <strong>16 oz</strong> of mushrooms and then slice the bigger ones in half.</p></li>
+<li><p>While the chicken is cooking, clean <strong>16 oz</strong> of white mushrooms and then slice the bigger ones in half.</p></li>
 <li><p>After removing the chicken from the skillet, add the mushrooms in their place, and sauté in the remaining oil and fat until the mushrooms are slightly tender and browned on the outside (5-7 minutes).</p></li>
 <li><p>Turn the heat down to medium-low.</p></li>
 <li><p>Add the prepared balsamic sauce to the skillet and stir to dissolve any browned bits from the bottom of the skillet.</p></li>
