--- a/_posts/2022-04-05-vegetable-barley-soup/vegetable-barley-soup.html
+++ b/_posts/2022-04-05-vegetable-barley-soup/vegetable-barley-soup.html
@@ -112,12 +112,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["Vegetable Barley Soup"]},{"type":"character","attributes":{},"value":["Quick and Easy Vegetable Barley Soup in the Instant Pot\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Robert M Flight"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["2022-04-05"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["vegetarian","soup","main-dish","barley","edamame"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["Vegetable Barley Soup"]},{"type":"character","attributes":{},"value":["Quick and Easy Vegetable Barley Soup in the Instant Pot\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Robert M Flight"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":[]}},"value":[]}]}]},{"type":"character","attributes":{},"value":["2022-04-05"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["vegetarian","soup","main-dish","barley","edamame","instant-pot"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["vegetable-barley-soup_files/anchor-4.2.2/anchor.min.js","vegetable-barley-soup_files/bowser-1.9.3/bowser.min.js","vegetable-barley-soup_files/distill-2.2.21/template.v2.js","vegetable-barley-soup_files/header-attrs-2.11/header-attrs.js","vegetable-barley-soup_files/jquery-3.6.0/jquery-3.6.0.js","vegetable-barley-soup_files/jquery-3.6.0/jquery-3.6.0.min.js","vegetable-barley-soup_files/jquery-3.6.0/jquery-3.6.0.min.map","vegetable-barley-soup_files/popper-2.6.0/popper.min.js","vegetable-barley-soup_files/tippy-6.2.7/tippy-bundle.umd.min.js","vegetable-barley-soup_files/tippy-6.2.7/tippy-light-border.css","vegetable-barley-soup_files/tippy-6.2.7/tippy.css","vegetable-barley-soup_files/tippy-6.2.7/tippy.umd.min.js","vegetable-barley-soup_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1477,6 +1477,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="dt=tag">main-dish</div>
 <div class="dt=tag">barley</div>
 <div class="dt=tag">edamame</div>
+<div class="dt=tag">instant-pot</div>
 </div>
 <!--/radix_placeholder_categories-->
 <p><p>Quick and Easy Vegetable Barley Soup in the Instant Pot</p></p>
@@ -1517,7 +1518,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <li>1 1/2 cup edamame beans.</li>
 <li>1 tsp thyme</li>
 <li>salt and pepper</li>
-<li>8 cups vegetable stock (or chicken stock)</li>
+<li>8 cups vegetable stock</li>
 </ul>
 <h2 id="directions">Directions</h2>
 <ul>
