An error and a picture

--- a/_posts/2022-07-21-chickpea-orzo-soup/chickpea-orzo-soup.html
+++ b/_posts/2022-07-21-chickpea-orzo-soup/chickpea-orzo-soup.html
@@ -117,7 +117,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["chickpea_soup.jpg","chickpea-orzo-soup_files/anchor-4.2.2/anchor.min.js","chickpea-orzo-soup_files/bowser-1.9.3/bowser.min.js","chickpea-orzo-soup_files/distill-2.2.21/template.v2.js","chickpea-orzo-soup_files/header-attrs-2.13/header-attrs.js","chickpea-orzo-soup_files/jquery-3.6.0/jquery-3.6.0.js","chickpea-orzo-soup_files/jquery-3.6.0/jquery-3.6.0.min.js","chickpea-orzo-soup_files/jquery-3.6.0/jquery-3.6.0.min.map","chickpea-orzo-soup_files/popper-2.6.0/popper.min.js","chickpea-orzo-soup_files/tippy-6.2.7/tippy-bundle.umd.min.js","chickpea-orzo-soup_files/tippy-6.2.7/tippy-light-border.css","chickpea-orzo-soup_files/tippy-6.2.7/tippy.css","chickpea-orzo-soup_files/tippy-6.2.7/tippy.umd.min.js","chickpea-orzo-soup_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1497,6 +1497,9 @@ id="toc-nutritional-information">Nutritional Information</a></li>
 </ul>
 </nav>
 </div>
+<div class="layout-chunk" data-layout="l-body">
+<p><img src="chickpea_soup.jpg" width="2016" /></p>
+</div>
 <h2 id="ingredients">Ingredients</h2>
 <ul>
 <li>1 Tbsp vegetable oil</li>
@@ -1510,7 +1513,7 @@ id="toc-nutritional-information">Nutritional Information</a></li>
 <li>6 - 8 cups vegetable broth</li>
 <li>1 Tbsp Italian Seasoning
 <ul>
-<li>2 tsp basic, 1 tsp oregano, 1/2 tsp thyme, some rosemary</li>
+<li>2 tsp basil, 1 tsp oregano, 1/2 tsp thyme, some rosemary</li>
 </ul></li>
 <li>Salt and Pepper per taste</li>
 <li>1 Tbsp lemon juice</li>
